Api, Service and persistence, completed
